--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@sendgrid/mail": "^6.3.1",
     "@types/chart.js": "^2.7.41",
     "angular-bootstrap-md": "^7.1.0",
     "angular5-csv": "^0.2.10",
@@ -31,11 +32,13 @@
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "firebase": "^5.7.0",
-    "firebase-tools": "^6.1.2",
+    "firebase-tools": "^6.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ng-image-placeholder": "^1.1.4",
     "ngx-toastr": "^9.1.1",
+    "python": "0.0.4",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
     "toast-controller": "^0.11.6",
